--- a/package.json
+++ b/package.json
@@ -2,19 +2,26 @@
   "name": "create-plan",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "transpile": "cross-env NODE_ENV=production babel src --out-dir transpiled --copy-files",
+    "start:prod": "cross-env NODE_ENV=production node server.js"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.10.0",
+    "@babel/core": "^7.10.0",
+    "@babel/preset-env": "^7.10.0",
+    "@babel/preset-react": "^7.10.0",
+    "cross-env": "^7.0.2",
+    "react-scripts": "3.4.1"
   },
   "eslintConfig": {
     "extends": "react-app"
